tests/shouldFail/expression-ill_formed_function4.bc
//EXPECTED BEHAVIOUR:
//process has one action, but contains a function in the rate that is ill-formed
//we should get syntax errors and a graceful exit

//WHAT IT TESTS:
// -expression parser correctly detects ill-formed functions and throws the appropriate error

//test absolute value
proc1[] = {action1, abs(15)*sqrt(15)//10};

//system line
proc1[];

//>SyntaxError
